@@ -273,6 +273,17 @@ From anywhere on the map, the player with this skill can render the target mob/p
 unable to receive any further RolePlay experience.  Use this skill again \
 on the same player to release them.
 
+ARCHON_LLMIFYC=LLMIFY
+LLMIFY=<ABILITY>\
+Usage    : LLMIFY [MOB NAME] (STOP/[PROMPT])\n\r\
+Example  : LLMIFY orc Respond only with the word 'smile'\n\r\
+If you have an LLM configured on this mud, this command will infect \
+an NPC with it, allowing all mud messages that the mob receives to \
+be sent to the LLM, and the LLM's response to be sent back \
+as commands.  If you can come up with a useful prompt that \
+does something useful, please email zac@coffeemud.net. \
+Use LLMIFY -mob name - STOP to turn it off.
+
 ARCHON_INSTANCEDISPLAY=INSTANCEDISPLAY
 ARCHON_INSTANCE_DISPLAY=INSTANCEDISPLAY
 INSTANCE_DISPLAY=INSTANCEDISPLAY
