@@ -36,6 +36,7 @@
  35. *Emoters props and behaviors now support PUFF emotes and some other features.
  36. New Scriptable triggers: WEARING_PROG, RIDE_PROG, RIDING_PROG
  37. Room varies now supports varying the room description by entry direction.
+ 38. New Archon skill: LLMIFY, for making LLM-powered mobs, if you can.
 
 # Build 5.10.5 Release 07/12/2025
   *  DATABASE CHANGED! (new CMCDAC table)
